--- a/application/index/view/employee/employee-info.html
+++ b/application/index/view/employee/employee-info.html
@@ -13,7 +13,7 @@
     </div>
     <div class="x-body">
       <xblock>
-        <button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>
+        <!--<button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>-->
         <button class="layui-btn" onclick="x_admin_show('添加员工','{:url(\'index/Employee/employeeAdd\')}',500,550)"><i class="layui-icon"></i>添加</button>
         <!--<span class="x-right" style="line-height:40px">共有数据：88 条</span>-->
 
@@ -23,11 +23,11 @@
           <table class="layui-table">
             <thead>
             <tr>
-            <th>
-              <div class="layui-unselect header layui-form-checkbox" lay-skin="primary"><i class="layui-icon">&#xe605;</i></div>
-            </th>
-              <th>操作</th>
-              <th>员工编号</th>
+            <!--<th>-->
+              <!--<div class="layui-unselect header layui-form-checkbox" lay-skin="primary"><i class="layui-icon">&#xe605;</i></div>-->
+            <!--</th>-->
+            <th  width="40px;">操作</th>
+            <th>员工编号</th>
             <th>员工姓名</th>
             <th>手机号</th>
             <th>部门名称</th>
@@ -50,9 +50,9 @@
         <tbody>
         {volist name="employeeInfo" id = "info"}
           <tr>
-            <td>
-              <div class="layui-unselect layui-form-checkbox" lay-skin="primary" data-id='2'><i class="layui-icon">&#xe605;</i></div>
-            </td>
+            <!--<td>-->
+              <!--<div class="layui-unselect layui-form-checkbox" lay-skin="primary" data-id='2'><i class="layui-icon">&#xe605;</i></div>-->
+            <!--</td>-->
             <td>
               <a title="编辑"onclick="x_admin_show('修改操作','{:url(\'index/Employee/employeeEdit\',[\'id\'=>$info.id])}',500,550)" href="javascript:;">
                 <i style="color: green" class="layui-icon"></i>
