--- a/application/index/view/blueprint/blueprint-info.html
+++ b/application/index/view/blueprint/blueprint-info.html
@@ -56,7 +56,7 @@
         <!--<th>-->
           <!--<div class="layui-unselect header layui-form-checkbox" lay-skin="primary"><i class="layui-icon">&#xe605;</i></div>-->
         <!--</th>-->
-        <th>编辑</th>
+        <th>操作</th>
         <th>明细编号</th>
         <th>公司编号</th>
         <th>外图编号</th>
@@ -83,6 +83,9 @@
         <!--</td>-->
         <td class="td-manage">
           <a title="详" onclick="x_admin_show('图纸明细 <span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的所有信息','{:url(\'index/blueprint/blueprintInfos\',[\'id\'=>$blueprintInfoList.drawing_detail_id])}')" href="javascript:;"><i style="color: green" class="layui-icon"></i></a>
+          <a title="删除" onclick="delete_(this,'{$blueprintInfoList.id}')" href="javascript:void(0);" >
+            <i  style="color:red;" class="layui-icon"></i>
+          </a>
         </td>
         <td> <a href="javascript:;" onclick="x_admin_show('<span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的工艺信息','{:url(\'index/blueprint/process\',[\'drawing_detail_id\'=>$blueprintInfoList.drawing_detail_id])}')" ><i class="layui-icon" style="color: #1E9FFF">{$blueprintInfoList.drawing_detail_id}</i></a></td>
         <td>{$blueprintInfoList.drawing_internal_id}</td>
@@ -125,6 +128,24 @@
     {$blueprintInfo|raw}
   </div>
   <script>
+      /*删除*/
+      function delete_(obj,id){
+          layer.confirm('确认要删除吗？',function(index){
+              var url = "<?php echo url('/index/Blueprint/delete'); ?>";
+              var postData ={"id":id};
+              $.post(url,postData,function (result) {
+                  if(result === 1 ){
+                      $(obj).parents("tr").remove();
+                      layer.msg('已删除!',{icon:1,time:1000});
+                  }else {
+                      layer.alert("删除失败", {icon: 5});
+                  }
+              },"json");
+          });
+      }
+
+
+
       layui.use('laydate', function(){
           var laydate = layui.laydate;
 
