--- a/application/index/view/blueprint/blueprint-outside.html
+++ b/application/index/view/blueprint/blueprint-outside.html
@@ -44,6 +44,7 @@
                     <th>建档日期</th>
                     <th>创建人</th>
                     <th>修改人</th>
+                    <th>修改日期</th>
                     <th>备注</th>
                 </tr>
             </thead>
@@ -65,6 +66,7 @@
                 <td>{$blueprintOutsideList.create_time}</td>
                 <td>{$blueprintOutsideList.create_name}</td>
                 <td>{$blueprintOutsideList.modify_name}</td>
+                <td>{$blueprintOutsideList.update_time}</td>
                 <td>{$blueprintOutsideList.remark}</td>
             </tr>
             {/volist}
