--- a/application/index/view/blueprint/blueprint-outside.html
+++ b/application/index/view/blueprint/blueprint-outside.html
@@ -16,20 +16,20 @@
         <!--<button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>-->
         <button class="layui-btn" onclick="x_admin_show('添加外图','{:url(\'index/blueprint/addDrawingExterna\')}',500,400)"><i class="layui-icon"></i>添加</button>
         &nbsp;&nbsp;&nbsp;&nbsp;
-        <div class="layui-input-inline"><input type="tel" id="findText" lay-verify="required|phone" autocomplete="off" placeholder="请输入关键字..." class="layui-input"></div>
-        <button class="layui-btn"  lay-submit="" lay-filter="sreach" id="find"><i class="layui-icon">&#xe615;</i></button>
-        <script>
-            $(function () {
-                $("#find").click(function () {
-                    var findText = $("#findText").val();
-                    if(findText.length > 1){
-                        window.location.href="{:url('index/blueprint/blueprintInfo')}";
-                    }else{
-                        layer.msg('请输入查找的关键字!',{icon:0,time:2000});
-                    }
-                });
-            })
-        </script>
+        <!--<div class="layui-input-inline"><input type="tel" id="findText" lay-verify="required|phone" autocomplete="off" placeholder="请输入关键字..." class="layui-input"></div>-->
+        <!--<button class="layui-btn"  lay-submit="" lay-filter="sreach" id="find"><i class="layui-icon">&#xe615;</i></button>-->
+        <!--<script>-->
+            <!--$(function () {-->
+                <!--$("#find").click(function () {-->
+                    <!--var findText = $("#findText").val();-->
+                    <!--if(findText.length > 1){-->
+                        <!--window.location.href="{:url('index/blueprint/blueprintInfo')}";-->
+                    <!--}else{-->
+                        <!--layer.msg('请输入查找的关键字!',{icon:0,time:2000});-->
+                    <!--}-->
+                <!--});-->
+            <!--})-->
+        <!--</script>-->
     </xblock>
 <div class="container-wrap">
     <div class="box-1">
