外图添加相关明细

--- a/application/index/view/blueprint/add-drawing-detial.html
+++ b/application/index/view/blueprint/add-drawing-detial.html
@@ -154,7 +154,7 @@
                     </select>
                 </div>
                 <input type="hidden" class="layui-btn" id="generatingForm">
-                <button type="button" class="layui-btn" id="resettinGeneratingForm">重置</button>
+                <!--<button type="button" class="layui-btn" id="resettinGeneratingForm">重置</button>-->
             </div>
         </div>
         <div id="materialDiv">
