--- a/application/index/view/client/client-edit.html
+++ b/application/index/view/client/client-edit.html
@@ -67,7 +67,7 @@
         </div>
 
         <div class="layui-form-item">
-            <label class="layui-form-label">部门名称</label>
+            <label class="layui-form-label">客户分类</label>
             <div class="layui-input-block">
                 <select name="client_classify_id" >
                     <option value="{$clientRow.accoun_num}">{$clientRow.accoun_num=1?"分类1":"分类2"}</option>
