--- a/application/index/view/blueprint/add-drawing-externa.html
+++ b/application/index/view/blueprint/add-drawing-externa.html
@@ -9,7 +9,7 @@
                   <input type="hidden" id="create_name" name="create_name" value="{$Think.session.user.user_name}">
                   <p id="pLog" style="color:red"></p>
               </div>
-              <button type="button" class="layui-btn" id="createId">生成</button>
+              <input type="hidden" class="layui-btn" id="createId">
           </div>
           <div class="layui-form-item">
               <label for="remark" class="layui-form-label">备注</label>
