完成消费类型模块

--- a/application/index/view/public/left.html
+++ b/application/index/view/public/left.html
@@ -139,6 +139,21 @@
                             <cite>职务名称</cite>
                         </a>
                     </li >
+                    <li>
+                        <a href="javascript:;">
+                            <i class="layui-icon layui-icon-rmb"></i>
+                            <cite>财务相关</cite>
+                            <i class="iconfont nav_right">&#xe697;</i>
+                        </a>
+                        <ul class="sub-menu">
+                            <li>
+                                <a _href="{:url('index/CostType/costInfo')}">
+                                    <i class="iconfont">&#xe6a7;</i>
+                                    <cite>费用类型</cite>
+                                </a>
+                            </li >
+                        </ul>
+                    </li>
                 </ul>
             </li>
             <li>
