--- a/application/index/view/blueprint/add-drawing-externa.html
+++ b/application/index/view/blueprint/add-drawing-externa.html
@@ -9,12 +9,12 @@
                   <input type="hidden" id="create_name" name="create_name" value="{$Think.session.user.user_name}">
                   <p id="pLog" style="color:red"></p>
               </div>
-              <input type="hidden" class="layui-btn" id="createId">
+              <button type="button" class="layui-btn" id="createId">生成</button>
           </div>
           <div class="layui-form-item">
               <label for="remark" class="layui-form-label">备注</label>
               <div class="layui-input-inline">
-                  <input type="text" id="remark" name="remark" lay-verify="required" autocomplete="off" class="layui-input">
+                  <input type="text" id="remark" name="remark" autocomplete="off" class="layui-input">
               </div>
           </div>
           <div class="layui-form-item">
@@ -32,7 +32,6 @@
                 $("#drawing_external_id").val("{$createId}");
                 $("#pLog").text("当前是自动生成编号状态，请勿修改");
             });
-            $("#createId").click();
         });
 
 
