--- a/application/index/view/blueprint/outside-edit.html
+++ b/application/index/view/blueprint/outside-edit.html
@@ -14,7 +14,7 @@
         <div class="layui-form-item">
             <label for="remark" class="layui-form-label">备注</label>
             <div class="layui-input-inline">
-                <input type="text" id="remark" name="remark" lay-verify="required" autocomplete="off" class="layui-input" value="{$outsideRow.remark}">
+                <input type="text" id="remark" name="remark"  autocomplete="off" class="layui-input" value="{$outsideRow.remark}">
             </div>
         </div>
         <div class="layui-form-item">
