--- a/application/index/view/blueprint/process-edit.html
+++ b/application/index/view/blueprint/process-edit.html
@@ -14,18 +14,6 @@
         <p id="pLog" style="color:red"></p>
       </div>
     </div>
-
-    <div class="layui-form-item layui-form-text">
-      <label class="layui-form-label">工艺说明</label>
-      <div class="layui-input-block">
-        <textarea name="process_content" id="content" >{$processRow.process_content}</textarea>
-      </div>
-    </div>
-    <script type="text/javascript">
-        //实例化编辑器
-        //建议使用工厂方法getEditor创建和引用编辑器实例，如果在某个闭包下引用该编辑器，直接调用UE.getEditor('editor')就能拿到相关的实例
-        UE.getEditor('content',{initialFrameWidth:300,initialFrameHeight:200,elementPathEnabled:false,wordCount:false, toolbars:[['bold','superscript','subscript','fontsize','spechars']]});
-    </script>
     <div class="layui-form-item">
       <label class="layui-form-label">工艺类型</label>
       <div class="layui-input-block">
@@ -33,11 +21,11 @@
           <option value=""></option>
           {volist name="processType" id ="processTypeInfo" }
           {$processRow.process_type}
-             <option value="{$processTypeInfo.id}"
-                     {if $processTypeInfo.id == $processRow.process_type }
-                     selected
-                     {/if}
-             >{$processTypeInfo.process_name}</option>
+          <option value="{$processTypeInfo.id}"
+                  {if $processTypeInfo.id == $processRow.process_type }
+                  selected
+                  {/if}
+          >{$processTypeInfo.process_name}</option>
           {/volist}
         </select>
       </div>
@@ -57,6 +45,18 @@
       </div>
     </div>
     {/if}
+    <div class="layui-form-item layui-form-text">
+      <label class="layui-form-label">工艺说明</label>
+      <div class="layui-input-block">
+        <textarea name="process_content" id="content" >{$processRow.process_content}</textarea>
+      </div>
+    </div>
+    <script type="text/javascript">
+        //实例化编辑器
+        //建议使用工厂方法getEditor创建和引用编辑器实例，如果在某个闭包下引用该编辑器，直接调用UE.getEditor('editor')就能拿到相关的实例
+        UE.getEditor('content',{initialFrameWidth:300,initialFrameHeight:200,elementPathEnabled:false,wordCount:false, zIndex:0,toolbars:[['bold','superscript','subscript','fontsize','spechars']]});
+    </script>
+
     <div class="layui-form-item">
       <label class="layui-form-label">是否检验</label>
       <div class="layui-input-block">
