--- a/application/index/view/client/client-info.html
+++ b/application/index/view/client/client-info.html
@@ -48,7 +48,7 @@
               {/if}
             </td>
             
-            <td onclick="openLinke('{$clientInfoList.id}','{$clientInfoList.client_abbreviation}')"><span style="color: #1E9FFF">{$clientInfoList.client_abbreviation}</span></td>
+            <td style="cursor: pointer" onclick="openLinke('{$clientInfoList.id}','{$clientInfoList.client_abbreviation}')"><span style="color: #1E9FFF">{$clientInfoList.client_abbreviation}</span></td>
             
             <td>{$clientInfoList.client_name}</td>
             <td>{$clientInfoList.person_in_charge}</td>
