--- a/application/index/view/blueprint/blueprint-info.html
+++ b/application/index/view/blueprint/blueprint-info.html
@@ -87,14 +87,15 @@
             <i  style="color:red;" class="layui-icon"></i>
           </a>
         </td>
-        <td> <a href="javascript:;" onclick="x_admin_show('<span class=\'layui-badge layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的工艺信息','{:url(\'index/blueprint/process\',[\'drawing_detail_id\'=>$blueprintInfoList.drawing_detail_id])}')" ><i class="layui-icon" style="color: #1E9FFF">{$blueprintInfoList.drawing_detail_id}</i></a></td>
-        <td>{$blueprintInfoList.drawing_internal_id}</td>
-        <td>{$blueprintInfoList.drawing_externa_id}</td>
+        <td> <a href="javascript:;" onclick="x_admin_show('<span class=\' layui-bg-blue\'>{$blueprintInfoList.drawing_detail_id}</span> 的工艺信息','{:url(\'index/blueprint/process\',[\'drawing_detail_id\'=>$blueprintInfoList.drawing_detail_id])}')" ><span style="color: #1E9FFF">{$blueprintInfoList.drawing_detail_id}</span></a></td>
+        <td> <a href="javascript:;" onclick="x_admin_show('<span class=\' layui-bg-blue\'>{$blueprintInfoList.drawing_internal_id}</span> 的图纸明细','{:url(\'index/blueprint/blueprintInfo\',[\'codeId\'=>$blueprintInfoList.drawing_internal_id,'key'=>'internal'])}')" ><span style="color: #1E9FFF">{$blueprintInfoList.drawing_internal_id}</span></a></td>
+        <td> <a href="javascript:;" onclick="x_admin_show('<span class=\' layui-bg-blue\'>{$blueprintInfoList.drawing_externa_id}</span> 的图纸明细','{:url(\'index/blueprint/blueprintInfo\',[\'codeId\'=>$blueprintInfoList.drawing_externa_id,'key'=>'externa'])}')" ><span style="color: #1E9FFF">{$blueprintInfoList.drawing_externa_id}</span></a></td>
         <td>{$blueprintInfoList.drawing_name}</td>
         <td>{$blueprintInfoList.material}</td>
         <td>{$blueprintInfoList.material_type|getMateria}</td>
         <td>{$blueprintInfoList.drawing_type}</td>
-        <td>{$blueprintInfoList.client_id|getClientName}</td>
+        <?php   $clienyname = getClientName($blueprintInfoList['client_id']);?>
+        <td> <a href="javascript:;" onclick="x_admin_show('<span class=\' layui-bg-blue\'>{$clienyname.clientName}</span> 的图纸明细','{:url(\'index/blueprint/blueprintInfo\',[\'codeId\'=>$clienyname.id,'key'=>'clients'])}')" ><span style="color: #1E9FFF"> <?php  echo $clienyname['clientName'];  ?></span></a></td>
         <td>{$blueprintInfoList.if_batch?"是":"否"}</td>
         <td class="td-manage">
 
